2006-03-21  Tom Tromey  <tromey@redhat.com>

	* vm/reference/gnu/classpath/Unsafe.java (arrayBaseOffset): Javadoc
	fix.
	(Unsafe): Now final.

2006-03-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/FormView.java
	(MouseEventListener): New inner class.

2006-03-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/ListView.java: New file.

2006-03-21  Tom Tromey  <tromey@redhat.com>

	* java/text/Bidi.java: Completed.

2006-03-21  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JTable.java:
	(columnAtPoint): Removed the null check, this method should throw a NPE
	if the argument is null.

2006-03-21  Robert Schuster  <robertschuster@fsfe.org>

        * javax/swing/text/DefaultHighlighter.java:
        (DefaultHighlighter.DefaultHighlightPainter.paint): Rewritten.

2006-03-21  Robert Schuster  <robertschuster@fsfe.org>

        * javax/swing/text/DefaultCaret.java: Added class variable denoting
        the textcomponent having a selection.
        (clearSelection): Clear 'componentWithSelection' variable.
        (handleSelection): Clear selection of current component having a
        selection before setting a new selection in another component.
	(mouseDragged): Only react on left mouse button.
	(mouseClicked): Only react on left mouse button.

2006-03-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalTabbedPaneUI.java
	(paintContentBorderTopEdge): Implemented.
	(paintContentBorderBottomEdge): Implemented.
	(paintContentBorderLeftEdge): Implemented.
	(paintContentBorderRightEdge): Implemented.
	(isLastTabInRun): New helper method.

2006-03-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTabbedPane.java
	(Page.getForeground): Fall back to returning the tabbed pane's
	foreground if no foreground has been exclicitly set.

2006-03-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalComboBoxButton.java
	(setEnabled): Update colors of button correctly.