@@ -39,6 +39,7 @@ exception statement from your version. */
 package javax.swing.text.html;
 
 import java.awt.Component;
+import java.awt.Point;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseAdapter;
@@ -246,5 +247,29 @@ public class FormView
   protected void imageSubmit(String imageData)
   {
     // FIXME: Implement this.
+  }
+
+  /**
+   * Determines the image data that should be submitted in response to a
+   * mouse click on a image. This is either 'x=<p.x>&y=<p.y>' if the name
+   * attribute of the element is null or '' or
+   * <name>.x=<p.x>&<name>.y=<p.y>' when the name attribute is not empty.
+   *
+   * @param p the coordinates of the mouseclick
+   */
+  String getImageData(Point p)
+  {
+    String name = (String) getElement().getAttributes()
+                                            .getAttribute(HTML.Attribute.NAME);
+    String data;
+    if (name == null || name.equals(""))
+      {
+        data = "x=" + p.x + "&y=" + p.y;
+      }
+    else
+      {
+        data = name + ".x=" + p.x + "&" + name + ".y=" + p.y; 
+      }
+    return data;
   }
 }
